# sp_vision_25_rosy

./: .gitignore  CMakeLists.txt  package.xml
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  example.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/: CMakeLists.txt  camera.cpp  camera.hpp  cboard.cpp  cboard.hpp  socketcan.hpp
io/dm_imu/: dm_imu.cpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.cpp  mindvision.hpp
io/ros2/: publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  subscribe2nav.cpp  subscribe2nav.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
sp_msgs/: CMakeLists.txt  package.xml
sp_msgs/msg/: AutoAimCommandMsg.msg  AutoaimTargetMsg.msg  EnemyStatusMsg.msg
src/: auto_buff_debug.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: aimer.cpp  armor.cpp  classifier.cpp  tracker.cpp  tracker.hpp  yolo.cpp
tasks/auto_aim/planner/tinympc/: admm.cpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
tasks/omniperception/: decider.cpp  decider.hpp
tests/: camera_detect_test.cpp  fire_test.cpp
tools/: CMakeLists.txt  exiter.cpp  extended_kalman_filter.cpp  profile_log.cpp  profile_log.hpp  thread_safe_queue.hpp
